updating portfolio site

--- a/dev/styles/partials/_variables.scss
+++ b/dev/styles/partials/_variables.scss
@@ -2,9 +2,9 @@
 
 $primaryColor: #ffc600;
 $secondaryColor: #ffffff ;
-$thirdColor: 000000;
+$thirdColor: #000000;
+	
+//Font family
 
-//Fonts
-
-$primaryFont: 'Myriad Pro', sans-serif;
+$primaryFont: 'Montserrat', sans-serif;
 $secondaryFont: 'Open Sans', sans-serif;
