--- a/dev/styles/partials/_contact.scss
+++ b/dev/styles/partials/_contact.scss
@@ -1,5 +1,6 @@
 section.contact{
 	display: flex;
+	font-size: 16px;
 	h2{
 		color: $primaryColor;
 	}
@@ -57,7 +58,7 @@ input{
 }
 
 textarea{
-	height: 169px;
+	height: 204px;
 	border: 1px solid $thirdColor;
 }
 .sendEmailButton{
