--- a/dev/styles/partials/_footer.scss
+++ b/dev/styles/partials/_footer.scss
@@ -1,3 +1,27 @@
 footer{
 	height: 360px;
+	background: $thirdColor;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	h3, p{
+		color: $secondaryColor;
+	}
+}
+.socialLinksContainer{
+	ul{
+	font-size: 24px;
+	display: flex;
+	align-items: center;
+	.devicon-github-plain, .fa{
+		background: $primaryColor;
+		border-radius: 50%;
+		padding: 10px;
+	}
+	}
+}
+
+ul li{
+	padding: 0 5px;
 }
