--- a/dev/styles/partials/_map.scss
+++ b/dev/styles/partials/_map.scss
@@ -4,6 +4,7 @@ section.map{
 	background-size: cover;
 	background-repeat: no-repeat;
 	width: 100%;
+	max-width: 1600px;
 	height:  400px;
 	transition: .5s;
 	&:hover{
