--- a/dev/styles/partials/_menu.scss
+++ b/dev/styles/partials/_menu.scss
@@ -1,17 +1,21 @@
-ul{
+ul.menu{
 	font-size: 16px;
 	color: $thirdColor;
-}
-
-ul.menu{
 	display: flex;
 	justify-content: flex-end;
 	margin-bottom: 104px;
 	margin-top: 31px;
 	li{
 		padding-right: 30px;
+		transition: .3s;
+		&:hover{
+			color: $primaryColor;
+			cursor: pointer;
+			transition: .3s;
+		}
 	}
 }
 ul.menu li:last-child{
 	padding-right: 0;
 }
+
