--- a/dev/styles/partials/_menu.scss
+++ b/dev/styles/partials/_menu.scss
@@ -1,9 +1,11 @@
+section.navBar{
+	display: flex;
+}
 ul.menu{
 	font-size: 16px;
 	color: $thirdColor;
 	display: flex;
 	justify-content: flex-end;
-	margin-bottom: 104px;
 	margin-top: 31px;
 	li{
 		padding-right: 30px;
