--- a/dev/styles/partials/_skills.scss
+++ b/dev/styles/partials/_skills.scss
@@ -27,3 +27,30 @@ section.skills{
 	align-items: center;
 }
 
+	/* Portrait tablet and small desktops */
+	@media (max-width: 899px) {
+		.box{
+			font-size: 90px;
+			width: 26%;
+			padding: 13px 0;
+		}
+		.toolsItem12 img{
+			width: 64px;
+		}
+		section.skills{
+			padding-bottom: 45px;
+		}
+	}
+
+	/* Landscape phones and down */
+	@media (max-width: 599px) {
+		.box{
+		width: 33%;
+		font-size: 50px;
+		padding: 16px;
+		}
+		.toolsItem12 img{
+			width: 35px;
+		}
+	}
+
