--- a/dev/styles/partials/_sectionHeading.scss
+++ b/dev/styles/partials/_sectionHeading.scss
@@ -18,11 +18,9 @@
 
 	/* Landscape phone to portrait tablet */
 	@media (max-width: 599px) {
-		margin-top: 36px;
-	}
-
-	/* Landscape phones and down */
-	@media (max-width: 480px) {
+		.sectionHeading{
+			margin-top: 36px;
+		}
 	}
 
 
