--- a/dev/styles/partials/_contact.scss
+++ b/dev/styles/partials/_contact.scss
@@ -45,6 +45,7 @@ section.contact{
 
 form{
 	display: flex;
+	padding: 0 10px;
 	.inputBox, .inputBoxTwo{
 		width: 50%;
 	}
@@ -72,6 +73,33 @@ textarea{
 	margin: 47px 0 123px 0;
 	text-align: center;
 }
+
+	/* Portrait tablet and small desktops */
+	@media (max-width: 940px) {
+	}
+
+	/* Landscape phone to portrait tablet */
+	@media (max-width: 768px) {
+		form{
+			flex-direction: column;
+		}
+		form .inputBox,form .inputBoxTwo{
+			width: 100%;
+		}
+		.contactFormItem{
+			margin: 0 auto;
+		}
+		.inputBoxTwo{
+			margin-top: 20px;
+		}
+	}
+
+	/* Landscape phones and down */
+	@media (max-width: 650px) {
+		.contactIconWrapper{
+			flex-direction: column;
+		}
+	}
 
 
 
