--- a/dev/styles/partials/_menu.scss
+++ b/dev/styles/partials/_menu.scss
@@ -21,3 +21,20 @@ ul.menu li:last-child{
 	padding-right: 0;
 }
 
+	/* Portrait tablet and small desktops */
+	@media (max-width: 801px) {
+		ul.menu{
+			justify-content: center;
+			font-size: 20px;
+			padding: 20px 0;
+		}
+	}
+
+	/* Landscape phone to portrait tablet */
+	@media (max-width: 768px) {
+	}
+
+	/* Landscape phones and down */
+	@media (max-width: 480px) {
+	}
+
