--- a/dev/styles/partials/_skills.scss
+++ b/dev/styles/partials/_skills.scss
@@ -2,6 +2,7 @@ section.skills{
 	background: $primaryColor;
 	display: flex;
 	padding-bottom: 121px;
+	box-shadow: 0px 2px 8px darkgrey;
 	h2{
 		color: $secondaryColor;
 	}
@@ -44,13 +45,23 @@ section.skills{
 
 	/* Landscape phones and down */
 	@media (max-width: 599px) {
+		.skills{
+			padding: 0 16px;
+		}
 		.box{
 		width: 33%;
-		font-size: 50px;
+		font-size: 40px;
 		padding: 16px;
-		}
-		.toolsItem12 img{
-			width: 35px;
+		h3{
+			font-size: 20px;
 		}
 	}
+		.toolsItem12 img{
+			width: 28px;
+		}
+		.toolsItem12 h3{
+			font-size: 20px;
+		}
+	}
+
 
