--- a/dev/styles/partials/_base-styles.scss
+++ b/dev/styles/partials/_base-styles.scss
@@ -7,6 +7,8 @@ body{
 p{
 	font-size: 16px;
 	color: $thirdColor;
+	line-height: 23px;
+	letter-spacing: 1px;
 }
 h1{
 	font-size: 69px;
@@ -69,10 +71,14 @@ img{
 	width: 1600px;
 }
 .inner-wrapper{
-	width: 1170px;
+	// width: 1170px;
+	width: 91vw;
 	margin: 0 auto;
 }
-
+.about-me-wrapper {
+	width: 91vw;
+	margin: 0 auto;
+}
 .sectionHeading{
 	margin: 121px 0;
 }
