--- a/dev/styles/partials/_menu.scss
+++ b/dev/styles/partials/_menu.scss
@@ -10,10 +10,12 @@ ul.menu{
 	li{
 		padding-right: 30px;
 		transition: .3s;
+		text-shadow: 0px 1px 6px darkgrey;
 		&:hover{
 			color: $primaryColor;
 			cursor: pointer;
 			transition: .3s;
+			text-shadow: none;
 		}
 	}
 }
