--- a/dev/styles/main.css
+++ b/dev/styles/main.css
@@ -135,10 +135,10 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
 
 header {
   height: 695px;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.55)), to(rgba(0, 0, 0, 0.45))), url("/dev/assets/rsz_against-wall-bg.jpg");
-  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.45)), url("/dev/assets/rsz_against-wall-bg.jpg");
-  background: -o-linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.45)), url("/dev/assets/rsz_against-wall-bg.jpg");
-  background: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.45)), url("/dev/assets/rsz_against-wall-bg.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.55)), to(rgba(0, 0, 0, 0.45))), url("../../assets/rsz_against-wall-bg.jpg");
+  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.45)), url("../../assets/rsz_against-wall-bg.jpg");
+  background: -o-linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.45)), url("../../assets/rsz_against-wall-bg.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.45)), url("../../assets/rsz_against-wall-bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
