--- a/dev/styles/partials/_footer.scss
+++ b/dev/styles/partials/_footer.scss
@@ -18,29 +18,36 @@ footer h3:hover{
 	color: $primaryColor;
 	transition: .3s;
 }
-.socialLinksContainer{
-	ul{
-	font-size: 24px;
-	display: flex;
+
+	// new styles - irene
+
+footer ul{
+	display:flex;
+	flex-flow: row wrap;
 	align-items: center;
-	.devicon-github-plain, .fa{
-		background: $primaryColor;
+	justify-content: space-around;
+	width: 30vw;
+	height: 60px;
+	li{
+		text-decoration: none;
+		height:50px;
+		width: 50px;
 		border-radius: 50%;
-		padding: 10px;
-		color: $thirdColor;
-		transition: .3s;
-		&:hover{
-			color: $secondaryColor;
-			transition: .3s;
-			}
+		background-color: $primaryColor;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		padding: 0 10px;
+		a{
+			font-size: 24px;
+			height: 24px;
+			width: 24px;
+			text-decoration: none;
+			color: $thirdColor;
 		}
 	}
 }
-
-ul li{
-	padding: 0 5px;
-}
-
+	
 	/* Portrait tablet and small desktops */
 	@media (max-width: 940px) {
 	}
@@ -50,13 +57,21 @@ ul li{
 		footer{
 			height: 250px;
 			transition: .3s ease-in-out;
+			.socialLinksContainer{
+				width: 60%;
+				display: flex;
+				justify-content: center;
+				ul.links{
+					width: 100%;
+				}
+			}
 		}
 	}
 
 	/* Landscape phones and down */
 	@media (max-width: 480px) {
 		footer{
-			height: 175px;
+			height: 250px;
 			transition: .3s ease-in-out;
 		}
 	}
